compiler-core/main/__core/type_/snapshots/gleam_core____core__type___tests__const_record_update_fieldless_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests.rs
assertion_line: 2420
expression: "pub type Animal { Animal(species: String) }\n\n        pub const alice = Animal(\"Cat\")\n        pub const dog = Animal(..alice)"
snapshot_kind: text
---
----- SOURCE CODE
pub type Animal { Animal(species: String) }

        pub const alice = Animal("Cat")
        pub const dog = Animal(..alice)

----- WARNING
warning: Fieldless record update
  ┌─ /src/warning/wrn.gleam:4:25
  │
4 │         pub const dog = Animal(..alice)
  │                         ^^^^^^^^^^^^^^^ This record update doesn't change any fields

Hint: Add some fields to change or replace it with the record itself.
