compiler-core/main/__core/type_/snapshots/gleam_core____core__type___tests__const_record_update_unlabelled_fields.snap
---
source: compiler-core/src_refactored/__core/type_/tests.rs
assertion_line: 2458
expression: "pub type Point { Point(Int, Int) }\n\n        pub const origin = Point(0, 0)\n        pub const point = Point(..origin)"
snapshot_kind: text
---
----- SOURCE CODE
pub type Point { Point(Int, Int) }

        pub const origin = Point(0, 0)
        pub const point = Point(..origin)

----- ERROR
error: Invalid record constructor
  ┌─ /src/one/two.gleam:4:27
  │
4 │         pub const point = Point(..origin)
  │                           ^^^^^ This is not a record constructor

Only record constructors can be used with the update syntax.
