compiler-core/main/__core/type_/snapshots/gleam_core____core__type___tests__const_record_update_variant_mismatch_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests.rs
assertion_line: 2377
expression: "pub type Subject {\n            Person(name: String, age: Int)\n            Animal(species: String)\n        }\n\n        pub const alice = Person(\"Alice\", 30)\n        pub const dog = Animal(..alice)"
snapshot_kind: text
---
----- SOURCE CODE
pub type Subject {
            Person(name: String, age: Int)
            Animal(species: String)
        }

        pub const alice = Person("Alice", 30)
        pub const dog = Animal(..alice)

----- ERROR
error: Incorrect record update
  ┌─ /src/one/two.gleam:7:34
  │
7 │         pub const dog = Animal(..alice)
  │                                  ^^^^^ This is a `Person`

This value is a `Person` so it cannot be used to build a `Animal`, even if
they share some fields.

Note: If you want to change one variant of a type into another, you should
specify all fields explicitly instead of using the record update syntax.
